; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ddb/extr_db_command.c_db_fncall_generic.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ddb/extr_db_command.c_db_fncall_generic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [29 x i8] c"Too many arguments (max 10)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64*, i32, i64*)* @db_fncall_generic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @db_fncall_generic(i64 %0, i64* %1, i32 %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64*, align 8
  %10 = alloca i64 (i64, i64, i64, i64, i64, i64, i64, i64, i64, i64)**, align 8
  store i64 %0, i64* %6, align 8
  store i64* %1, i64** %7, align 8
  store i32 %2, i32* %8, align 4
  store i64* %3, i64** %9, align 8
  %11 = load i64, i64* %6, align 8
  %12 = inttoptr i64 %11 to i64 (i64, i64, i64, i64, i64, i64, i64, i64, i64, i64)**
  store i64 (i64, i64, i64, i64, i64, i64, i64, i64, i64, i64)** %12, i64 (i64, i64, i64, i64, i64, i64, i64, i64, i64, i64)*** %10, align 8
  %13 = load i32, i32* %8, align 4
  %14 = icmp sgt i32 %13, 10
  br i1 %14, label %15, label %17

15:                                               ; preds = %4
  %16 = call i32 @db_printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %5, align 4
  br label %52

17:                                               ; preds = %4
  %18 = load i64 (i64, i64, i64, i64, i64, i64, i64, i64, i64, i64)**, i64 (i64, i64, i64, i64, i64, i64, i64, i64, i64, i64)*** %10, align 8
  %19 = load i64 (i64, i64, i64, i64, i64, i64, i64, i64, i64, i64)*, i64 (i64, i64, i64, i64, i64, i64, i64, i64, i64, i64)** %18, align 8
  %20 = load i64*, i64** %9, align 8
  %21 = getelementptr inbounds i64, i64* %20, i64 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64*, i64** %9, align 8
  %24 = getelementptr inbounds i64, i64* %23, i64 1
  %25 = load i64, i64* %24, align 8
  %26 = load i64*, i64** %9, align 8
  %27 = getelementptr inbounds i64, i64* %26, i64 2
  %28 = load i64, i64* %27, align 8
  %29 = load i64*, i64** %9, align 8
  %30 = getelementptr inbounds i64, i64* %29, i64 3
  %31 = load i64, i64* %30, align 8
  %32 = load i64*, i64** %9, align 8
  %33 = getelementptr inbounds i64, i64* %32, i64 4
  %34 = load i64, i64* %33, align 8
  %35 = load i64*, i64** %9, align 8
  %36 = getelementptr inbounds i64, i64* %35, i64 5
  %37 = load i64, i64* %36, align 8
  %38 = load i64*, i64** %9, align 8
  %39 = getelementptr inbounds i64, i64* %38, i64 6
  %40 = load i64, i64* %39, align 8
  %41 = load i64*, i64** %9, align 8
  %42 = getelementptr inbounds i64, i64* %41, i64 7
  %43 = load i64, i64* %42, align 8
  %44 = load i64*, i64** %9, align 8
  %45 = getelementptr inbounds i64, i64* %44, i64 8
  %46 = load i64, i64* %45, align 8
  %47 = load i64*, i64** %9, align 8
  %48 = getelementptr inbounds i64, i64* %47, i64 9
  %49 = load i64, i64* %48, align 8
  %50 = call i64 %19(i64 %22, i64 %25, i64 %28, i64 %31, i64 %34, i64 %37, i64 %40, i64 %43, i64 %46, i64 %49)
  %51 = load i64*, i64** %7, align 8
  store i64 %50, i64* %51, align 8
  store i32 1, i32* %5, align 4
  br label %52

52:                                               ; preds = %17, %15
  %53 = load i32, i32* %5, align 4
  ret i32 %53
}

declare dso_local i32 @db_printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
